# rt-weekend-vk

./: .gitignore  CMakeLists.txt  README.md  compute.glsl  main.cpp  stbi.cppm  vkb.cppm  vma.cppm  vma.hpp
data_gen/: data_gen.py  image_10.py  image_13.py  image_16.py  image_17.py  image_18.py  image_19.py  image_23.py
scripts/: build.sh  compile_shader.sh  compile_shader_and_run.sh  run.sh
shaders/: camera.glsl  common.glsl  geom.glsl  main.glsl  material.glsl  pcg.glsl  world.glsl
